--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="//shiu00983.oss-cn-shanghai.aliyuncs.com/qqred/bao/share.css">
 <link rel="stylesheet" href="//shiu00983.oss-cn-shanghai.aliyuncs.com/qqred/bao/index.css">
 <script>
-localhost.href='detail.html';
+location.href='detail.html';
 </script>
 </head>
 <body>
